# xboinc

./: .gitignore  README.md  first_setup_compilation_machine.txt  install.txt  install_protection_hook.sh  make_release_branch.py  pin_xsuite_versions.sh  pyproject.toml  release.py  rename_release_branch.py  setup.py  version.sh
examples/: register.py  results.py  submission.py  timing.py
examples/000_build_executable/: 001msys2_compile_executable.sh
examples/001_simple_line/: 001_build_input.py  002_run_executable.sh  003_read_output.py
examples/002_lhc/: 001_build_input.py  003_read_output.py
examples/003_boinc/: .xtrack.cpp.swp  000_build_executable.py  001mac_compile_executable.sh  001msys2_compile_executable.sh  003_read_output.py  Makefile  Makefile_win  boinc_uppercase_0  cleanall.sh  client_state_save.xml  errors.txt  main.c  main.c.save  sim_config.h  stderr.txt  xtrack.cpp  xtrack.cpp.save  xtrack.h  xtrack_tracker.h  xtrack_tracker.h.save
examples/004_submissions/: 001_sub_noloop.py  002_submission.py
examples/executable/: 000_build_executable.py  001_build_input.py  002_run_executable.sh  003_read_output.py
examples/executables/: xboinc_test_0.1-x86_64-pc-linux-gnu
examples/low_level_api/: lossmap.py  simple_line.py  timing.py
examples/running/: lossmap.py  simple_line.py  xboinc_0.1-arm64-apple-darwin  xboinc_0.1-darwin-arm64  xboinc_0.1-linux-x86_64  xboinc_0.1-x86_64-apple-darwin  xboinc_0.1-x86_64-pc-linux-gnu
tests/: test_00_version.py  test_01_compilation_and_running.py  test_02_user.py  test_03_submission_and_retrieval.py  test_99_clean.py  test_compilation_and_running.py  test_generation.py  test_track.py  test_user.py  test_user_submission.py  test_version.py  test_xboinc_track.py
xboinc/: __init__.py  default_tracker.py  eos.py  general.py  generate_executable_source.py  register.py  retrieve.py  sim_data.py  submit.py  user.py
xboinc/executable/: Makefile  __init__.py  default_tracker.py  generate.py  generate_executable_source.py  main.c  xboinc.cpp  xboinc.h  xtrack.c  xtrack.h
xboinc/executable_src/: main.c
xboinc/server/: __init__.py  afs.py  eos.py  fs.py  paths.py  tools.py
xboinc/simulation_data/: __init__.py  compatible versions.py  simulation_state.py
xboinc/simulation_io/: __init__.py  default_tracker.py  input.py  output.py  version.py
