# copyright ############################### #
# This file is part of the Xboinc Package.  #
# Copyright (c) CERN, 2023.                 #
# ######################################### #

[tool.poetry]
name = "xboinc"
version = "0.1.0"
description = "Xsuite BOINC interface"
homepage = "https://github.com/xsuite/xboinc"
repository = "https://github.com/xsuite/xboinc"
authors = [
           "Frederik F. Van der Veken <frederik@cern.ch>",
           "Davide Di Croce <davide.di.croce@cern.ch>",
           "Giovanni Iadorala <giovanni.iadorala@cern.ch>"
]
readme = "README.md"
license = "Apache 2.0"
include = [ "LICENSE", "NOTICE" ]


[tool.poetry.dependencies]
python   = '>=3.8'
numpy    = '>=1.0'
xobjects = '==0.2.8'
xdeps    = '==0.4.2'
xpart    = '==0.15.3'
xtrack   = '==0.42.0'
xfields  = '==0.13.1'
xcoll    = '==0.2.5'

[tool.poetry.dev-dependencies]
pytest = ">7"

[build-system]
# Needed for pip install -e (BTW: need pip version 22)
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
