# copyright ############################### #
# This file is part of the Xboinc Package.  #
# Copyright (c) CERN, 2025.                 #
# ######################################### #

[tool.poetry]
name = "xboinc"
version = "0.3.0"
description = "Xsuite BOINC interface"
homepage = "https://github.com/xsuite/xboinc"
repository = "https://github.com/xsuite/xboinc"
authors = [
           "Frederik F. Van der Veken <frederik@cern.ch>",
           "Carlo E. Montanari <carlo.emilio.montanari@cern.ch>",
           "Davide Di Croce <davide.di.croce@cern.ch>",
           "Giovanni Iadorala <giovanni.iadorala@cern.ch>"
]
readme = "README.md"
license = "Apache 2.0"
include = [ "LICENSE", "NOTICE" ]


[tool.poetry.dependencies]
python   = '>=3.9'
numpy    = '>=1.0'
xobjects = ">=0.5.0"
xdeps    = '==0.10.5'
xpart    = '==0.23.0'
xtrack   = '==0.84.7'
xfields  = '==0.24.0'
xcoll    = '==0.6.1'
xaux     = '==0.3.5'

[poetry.group.dev.dependencies]
pytest = ">7"

[build-system]
# Needed for pip install -e (BTW: need pip version 22)
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
